Update Utility.java